# ebook-audio-studio

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: pages.yml
client/: eslint.config.js  index.html  package.json  vite.config.ts
client/src/: App.tsx  api.ts  styles.css
server/: .env.example  eslint.config.js  package.json
server/src/: config.ts  index.ts  jobs.ts  types.ts
server/src/services/: extractText.ts  transformText.ts  tts.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
