[package]
name = "ebook-audio-studio"
version = "0.1.0"
description = "Local ebook to audio desktop app"
authors = ["Ebook Audio Studio"]
edition = "2021"

[lib]
name = "ebook_audio_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"

