[package]
name = "ebook-audio-studio"
version = "0.1.0"
description = "Local ebook to audio desktop app"
authors = ["Ebook Audio Studio"]
edition = "2021"

[lib]
name = "ebook_audio_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
flate2 = "1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = "0.4"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
zip = { version = "4", default-features = false, features = ["deflate"] }
